# rustyrabbit

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.slint  calibration.slint  calibration_popup.slint  camera.slint  control.slint  log.slint  tab.slint
